# csp-billing-adapter-microsoft

./: .gitignore  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  csp-billing-adapter-microsoft.spec  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-workflow.yml  obs-publish.yml
csp_billing_adapter_microsoft/: __init__.py  plugin  plugin.py
tests/data/: good_config.yaml
tests/unit/: test_plugin.py
