[bumpversion]
current_version = 0.1.1
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:csp_billing_adapter_microsoft/__init__.py]

[bumpversion:file:csp-billing-adapter-microsoft.spec]

[tool:pytest]
testpaths = tests

[coverage:report]
fail_under = 90
show_missing = True

[metadata]
license_file = LICENSE
